# crate-names

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: artifacts.yml  ci.yaml  ci.yml  conventional.yml  docs.yml  public-api.yml  rust-clippy.yml
src/: build.rs  format.rs  lib.rs  main.rs  read.rs
tests/: roundtrip.rs
